# Remote_Control

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Clash-Claude-Proxy-Setup.md  HANDOFF_PROMPT.md  README.md  SECURITY.md  r.sh
Cangjie-Embodied/: 20260331-cc-system_topology.md
RemoteControl/mc02_microros/: README.md  platformio.ini
RemoteControl/swerve_chassis/: 20260408-cc-swerve_chassis.xml  20260408-cc-swerve_keyboard_control.py  README.md
TouchUsage/: AGENT_GUIDE.md  README.md  workspace_calibration.md
TouchUsage/scripts/: deploy.sh  reset_device.sh  run_background.sh  run_interactive.sh
TouchUsage/src/: force_background.c  force_interactive.c
cloud/: README.md  livekit.yaml  signaling_server.py  turnserver.conf
controller/: README.md
controller/clash-config/: Merge.yaml
desktop-shortcuts/: 20250316-cc-启动双目推流和预览.sh  20250316-cc-预览双目相机.sh  20250316-日报-WebRTC公网图传.md  双目推流+预览.desktop  双目预览.desktop
device-a-linux/: EXPERIMENTAL_VALIDATION_2026-04-08.md  README.md  ROS2_SETUP.md  zedmini_livekit_sender.py  zedmini_webrtc_sender.py
device-a-linux/dm_motor/: .gitignore  SESSION_LOG.md  calibration.example.json
device-a-linux/ros2_ws/src/airbot_msgs/: CMakeLists.txt
device-a-linux/ros2_ws/src/airbot_msgs/msg/: ArmCommand.msg
device-a-linux/ros2_ws/src/teleop_msgs/: CMakeLists.txt
device-a-linux/ros2_ws/src/teleop_msgs/msg/: HeadPose.msg
device-a-linux/systemd/: lk-sender.service
docker/: .dockerignore  Dockerfile  docker-compose.yaml  entrypoint.sh
docs/: stereo_stream_config.md
force-feedback-pen/: 20260328-cc-airbot_force_sim.py  20260328-cc-airbot_mujoco_scene.xml  20260328-cc-haptic_demo  20260328-cc-haptic_demo.c  20260328-cc-haptic_driver.py  20260328-cc-install_driver.sh  20260328-cc-pen_keyboard_client.py  20260328-cc-run.sh  20260328-cc-run_sim.sh  20260328-cc-touch_serial_driver.py  20260329-cc-hdapi_test.py  20260329-cc-patch_and_run.sh  20260329-cc-servo_debug.py  20260329-cc-servo_debug2.py  20260329-cc-servo_dtr_test.py  20260329-cc-servo_stream_test.py  20260329-cc-test_haptic_full.c  20260329-cc-test_haptic_v4.c  20260329-cc-touch_haptic_node.cpp  20260331-cc-delay_perception_test.py  Makefile
operator-asus/: README.md  asus_teleop_gui.py
operator-vp/: README.md
rain-cangjie/: 20260425-cc-ros_to_cloud_bridge.py  20260427-cc-chassis_controller_node_v3.py  README.md
rain-cangjie/legacy/: 20260424-cc-chassis_controller_node.py
rain-cangjie/scripts/: 20260418-cc-pi_steer_test.py  20260420-cc-pi_3519_mit_test.py  20260420-cc-pi_3519_test.py  (+13 more)
rain-orin/: 20260422-cc-pose_data_receiver.py  20260422-cc-zedmini_hw_rtmp_sender.py  20260424-cc-keyboard_teleop_node.py  20260424-cc-teleop_safety_node.py  20260425-cc-cloud_teleop_bridge_node.py  20260425-cc-cloud_to_ros_bridge.py  README.md  generate_livekit_tokens.py  gst_hw_tcp.sh  requirements.txt  setup_linux.sh  zedmini_livekit_sender.py
ros2_ws/src/airbot_msgs/: package.xml
ros2_ws/src/teleop_dm_motor/: package.xml
ros2_ws/src/teleop_dm_motor/config/: dm_motor_presets.yaml
ros2_ws/src/teleop_livekit_bridge/: package.xml
ros2_ws/src/teleop_mujoco_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/teleop_mujoco_sim/config/: swerve_dm_motor.yaml
ros2_ws/src/teleop_mujoco_sim/launch/: sim.launch.py
ros2_ws/src/teleop_mujoco_sim/teleop_mujoco_sim/: keyboard_teleop_node.py  mujoco_sim_node.py  swerve_dm_driver_node.py  touch_haptic_node.py
scripts/: .html  20250314-cc-receive_stereo_ultralow_mac.sh  20250314-cc-receive_stream.sh  20250314-cc-receive_ultralow.sh  20250314-cc-start_stereo_stream.sh  20250314-cc-stereo_balanced.sh  20250314-cc-stereo_lowlatency.sh  20250314-cc-stereo_nobuffer.sh  20250314-cc-stereo_ultralow.sh  20250314-cc-test_single_stream.sh  20250314-cc-test_single_stream_60fps.sh  20250315-cc-signaling_server_8765.py  20250315-cc-webrtc_stereo_sender.py  20250316-cc-start_webrtc.sh  20250316-cc-start_webrtc_with_preview.sh  20250316-cc-stop_webrtc.sh  20250316-cc-webrtc_receiver_mac.py  20250316-cc-webrtc_sender_hybrid.py  20250316-cc-webrtc_signaling_client.py  20250316-cc-webrtc_signaling_server.py  20250316-cc-webrtc_simple_test.py  20250316-cc-webrtc_stereo_client.py  20250316-cc-webrtc_stereo_merged_client.py  20250316-cc-webrtc_stereo_merged_client_v2.py  20250316-cc-webrtc_stereo_simple.sh  20250316-cc-webrtc_stereo_start.sh  20250316-cc-webrtc_stereo_start_with_preview.sh  20250316-cc-webrtc_stereo_stop.sh  20260329-cc-touch_demo.c  20260330-cc-visionpro_stereo_receiver.html  20260330-cc-zedmini_webrtc_sender.py  20260405-cc-webrtc_browser_test.html  20260405-cc-zedmini_aiortc_sender.py  20260407-cc-dm_motor_visionpro_control.py  20260408-cc-NEXT_SESSION_PLAN.md  20260408-cc-patch_haptic.sh  20260408-cc-run_full.sh  20260408-cc-swerve_auto_test.py  20260408-cc-swerve_chassis.xml  20260408-cc-swerve_keyboard_control.py  (+10 more)
touch/: 20260409-cc-README.md  20260409-cc-handoff_to_next_agent.md  20260409-cc-run_all.sh
(+166 files in other folders)
